--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,11 @@ on:
   push:
 
 jobs:
-  run_tests:
-    runs-on: [ubuntu-latest]
+  test:
+    runs-on: ubuntu-latest
     steps:
-        run: gcc src/main.c | ./a.out
+      - name: Build
+        run:  gcc main.c
+        timeout-minutes: 1
+
       - 
