--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,5 +8,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Build
-        run:  gcc src/main.c
+        run:  ./build.sh
         timeout-minutes: 1
